--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 h1 {
 
   font-size: 40px;
-  color: #F5A623;
+/*   color: #F5A623; */
+  color: #C2C8FE;
   line-height: 48px;
   display: inline;
 }
