--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@
 h1 {
 
   font-size: 40px;
-/*   color: #F5A623; */
-  color: #C2C8FE;
+  color: #9D93D2;
   line-height: 48px;
   display: inline;
 }
@@ -77,7 +76,7 @@ p {
 a {
   color: #1199C3;
   text-decoration: none;
-  margin-top: 10px;
+/*  margin-top: 10px; */
   display: block;
 }
 
@@ -89,21 +88,36 @@ a {
 }
 
 #skillsH3 {
-  color: #F5AE23;
+  color: #AAA6C2;
   display: none;
+  margin-top: 20px;
+  padding: 0;
+}
+
+#linkedin {
+  display: inline;
+}
+
+#topContacts {
+  margin-top: 75px;
 }
 
 .orange {
-  background-color: #F5AE23;
+  background-color: #AAA6C2;
 }
 
 .orange-text {
-  color: #F5AE23;
+  color: #AAA6C2;
 }
 
 .white-text {
   font-weight: bold;
-  color: #FFFFFF;
+  color: #CCCCCC;
+}
+
+#workExperience {
+  margin-top: 290px;
+  padding-top: 2.5%;
 }
 
 .gray {
@@ -118,7 +132,12 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #3D3277;
+  position: fixed;
+  top: 0px;
+  z-index: 100;
+  width: calc(100% - 10%);
+  height: 250px;
 }
 
 .flex-box {
@@ -145,7 +164,10 @@ ul {
 .biopic {
   float: left;
   padding: 10px;
+  margin-right: 20px;
   width: 200px;
+  box-shadow: 4px 4px 5px #655AA0;
+  border-radius: 100%;
   display: none;
 }
 
@@ -168,6 +190,7 @@ img {
 
 span {
   padding: 5px;
+  color: #0A0524;
 }
 
 #letsConnect {
@@ -183,6 +206,21 @@ span {
 @media only screen and (max-width:900px) {
   .biopic {
     width: 175px;
+  }
+  #topContacts {
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 835px) {
+    #topContacts {
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (max-width: 781px) {
+    #topContacts {
+    margin-top: 10px;
   }
 }
 
