--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,6 @@ a {
   color: #CCCCCC;
 }
 
-#workExperience {
-  margin-top: 290px;
-  padding-top: 2.5%;
-}
-
 .gray {
   background-color: #F3F3F3;
   padding-bottom: 10px;
@@ -130,14 +125,12 @@ a {
   background-color: #4A4A4A;
 }
 
-/* TODO: Replace with image later */
 #header {
   background-color: #3D3277;
   position: fixed;
   top: 0px;
   z-index: 100;
   width: calc(100% - 10%);
-  height: 250px;
 }
 
 .flex-box {
@@ -166,7 +159,9 @@ ul {
   padding: 10px;
   margin-right: 20px;
   width: 200px;
-  box-shadow: 4px 4px 5px #655AA0;
+  -webkit-box-shadow: 4px 4px 10px 0px rgba(50, 50, 50, 0.45);
+  -moz-box-shadow:    4px 4px 10px 0px rgba(50, 50, 50, 0.45);
+  box-shadow:         4px 4px 10px 0px rgba(50, 50, 50, 0.45);
   border-radius: 100%;
   display: none;
 }
