--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h2, h3, h4, h5 {
   color: #999999;
   line-height: 16px;
   float: left;
+  width: 100%;
 }
 
 .location-text {
@@ -76,10 +77,41 @@ p {
 a {
   color: #1199C3;
   text-decoration: none;
-/*  margin-top: 10px; */
   display: block;
 }
 
+button.accordion {
+    background-color: #ABA5CC;
+    padding: 14px 0 14px 0;
+    color: #444;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.6s ease-in-out;
+    opacity: 0;
+}
+
+div.panel.show {
+    opacity: 1;
+    max-height: 1000px;
+    overflow: auto;
+    padding-bottom: 1%;
+}
 .welcome-message {
   font-style: italic;
   font-size: 18px;
@@ -102,11 +134,11 @@ a {
   margin-top: 75px;
 }
 
-.orange {
+.blue {
   background-color: #AAA6C2;
 }
 
-.orange-text {
+.blue-text {
   color: #AAA6C2;
 }
 
@@ -119,6 +151,7 @@ a {
   background-color: #F3F3F3;
   padding-bottom: 10px;
   clear:both;
+  overflow: auto;
 }
 
 .dark-gray {
