--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h2, h3, h4, h5 {
   font-style: italic;
   font-size: 14px;
   color: #999999;
-  line-height: 16px;
+  line-height: 20px;
   float: left;
   width: 100%;
 }
@@ -81,11 +81,11 @@ a {
 }
 
 button.accordion {
-    background-color: #ABA5CC;
-    padding: 14px 0 14px 0;
+    /* background-color: #ABA5CC; */
+    padding: 1px 0 1px 0;
     color: #444;
     cursor: pointer;
-    width: 100%;
+    width: auto;
     border: none;
     text-align: left;
     outline: none;
