--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ button.accordion {
     padding: 1px 0 1px 0;
     color: #444;
     cursor: pointer;
-    width: auto;
+    width: 100%;
     border: none;
     text-align: left;
     outline: none;
@@ -94,8 +94,9 @@ button.accordion {
 }
 button.accordion:after {
   position: absolute;
-  right: 20px;
+  right: 5%;
   content: "";
+  transition: 0.5s ease-in-out;
   background: url(../images/expand.png);
   width: 16px;
   height: 16px;
@@ -106,6 +107,7 @@ button.accordion.active, button.accordion:hover {
 }
 
 button.accordion.active:after {
+  transition: 0.5s ease-in-out;
   transform: scaleY(-1);
 }
 
